[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/Times-New-Roman/times new roman bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Modules/UI/Add Edit Delete Display View/Delete or Display/DisplayList.gd" type="Script" id=4]
[ext_resource path="res://Assets/Other Themes/FlatUI/kenneyUI-green.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.658824, 0.309804, 0.815686, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 5

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 1 )

[node name="DisplayList" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -136, -336 )
script = ExtResource( 4 )

[node name="UserLabel" type="Label" parent="."]
margin_left = 15.0
margin_top = 5.0
margin_right = 175.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 5 )
text = "User"

[node name="DeleteConfirmation" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
theme = ExtResource( 5 )
window_title = "Mohon Untuk Konfirmasi Penghapusan"
resizable = true
dialog_text = "Kamu akan menghapus salah satu atau beberapa item ejaan. Apa benar itu yang kamu mau?"
dialog_hide_on_ok = false
dialog_autowrap = true

[node name="WindowSize" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -472.0
margin_top = -456.0
margin_right = 424.0
margin_bottom = -48.0

[node name="Background" type="Panel" parent="WindowSize"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -464.0
margin_top = -220.0
margin_right = 512.0
margin_bottom = 196.0
custom_styles/panel = SubResource( 4 )

[node name="ItemList" type="ItemList" parent="WindowSize"]
margin_right = 192.0
margin_bottom = 384.0
rect_min_size = Vector2( 192, 384 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )

[node name="ScrollContainer" type="ScrollContainer" parent="WindowSize"]
margin_left = 208.0
margin_right = 942.0
margin_bottom = 320.0
theme = ExtResource( 5 )

[node name="GridContainer" type="GridContainer" parent="WindowSize/ScrollContainer"]
theme = ExtResource( 5 )
custom_constants/vseparation = 64
custom_constants/hseparation = 64
columns = 3

[node name="DeleteBtn" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -128.0
margin_right = -36.6759
margin_bottom = -66.749
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "Hapus"

[connection signal="confirmed" from="DeleteConfirmation" to="." method="_on_DeleteConfirmation_confirmed"]
[connection signal="popup_hide" from="DeleteConfirmation" to="." method="_on_DeleteConfirmation_popup_hide"]
[connection signal="item_selected" from="WindowSize/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="DeleteBtn" to="." method="_on_DeleteBtn_pressed"]
